# mo65x-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
asm/: demoscene2.asm  stest.asm  test-01.asm
src/: backend.rs  console.rs  emulator.rs  error.rs  frontend.rs  gui.rs  gui_druid.rs  gui_iced.rs  info.rs  main.rs  mos6510.rs  state.rs  terminal.rs  utils.rs  video.rs
src/console/: commands.rs  parser.rs  print_info.rs  print_state.rs  textline.rs  view.rs
src/mos6510/: addr.rs  addressing_mode.rs  addrmode.rs  asm.rs  assembler.rs  assembly.rs  cpu.rs  cpuinfo.rs  disassembler.rs  error.rs  exec_env.rs  instruction.rs  memory.rs  mod.rs  op_code.rs  opcode.rs  operation.rs  registers.rs  state.rs  statistics.rs
src/mos6510/asm/: assembler.rs  error.rs  object_code.rs  operand.rs
src/mos6510/asm/assembler/: patterns.rs  tokens.rs
src/mos6510/assembler/: asm_result.rs  assembler_tests.rs  assembly.rs  code.rs  code_builder.rs  error.rs  object_code.rs  operand.rs  patterns.rs  session.rs  tests.rs  tokens.rs
src/mos6510/assembly/: mnemonic.rs  operand.rs  parser.rs  processor.rs
src/mos6510/cpu/: cpu_tests.rs  decoder.rs  env.rs  exec_env.rs  execenv.rs  flags.rs  instr_env.rs  registers.rs  tests.rs
