[package]
name = "mo65x-rs"
version = "0.1.0"
authors = ["Robert Jaremczak <robert@emanacja.top>"]
edition = "2018"
description = "My Own 65xx emulator, assembler and monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3.20"
crossterm = "0.29.0"
minifb = "0.28"
lazy_static = "1.4.0"